welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers(c:Color){
  setCouleurBrosse(c); baisseBrosse()
  avance(); avance(); avance(); recule(); gauche(); recule(); avance(); avance(); recule
  leveBrosse()
  setCouleurBrosse(Color.yellow); baisseBrosse(); leveBrosse()
  droite()
}


def motif(){
  growFlowers(Color.red); avance(); avance(); avance(); growFlowers(Color.cyan)
  for (i <- 1 to 5){
    reculer()
  }
  droite(); avance(); avance(); gauche(); avance(); avance(); avance(); growFlowers(Color.orange)
  recule(); recule(); recule(); droite(); avance(); avance(); gauche(); growFlowers(Color.pink); avance(); avance(); avance(); growFlowers(Color.green)
}